--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.packaging.dependencies]
+cx-freeze = "^8.2.0"
+nuitka = "^2.6.9"
+pyoxidizer = "^0.24.0"
+
