improve runner docker

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -34,8 +34,9 @@ ENV PIP_DEFAULT_TIMEOUT=1000
 RUN poetry export -f requirements.txt --without-hashes > requirements.txt
 RUN pip install --break-system-packages -r requirements.txt
 
+COPY __init__.py /app/
 COPY main.py /app/
-COPY local_data_parse /app/
+COPY local_data_parse /app/local_data_parse/
 COPY scan_project_env.py /app/
 
 RUN apt-get update && \
@@ -46,5 +47,18 @@ RUN apt-get install -y --no-install-recommends libglib2.0
 
 RUN apt-get install -y --no-install-recommends libxkbcommon-x11-0
 
+RUN apt-get install -y --no-install-recommends libgl1
+RUN apt-get install -y --no-install-recommends libxcb-xinerama0 \
+libxcb-cursor0 \
+libxkbcommon-x11-0 \
+libxcb-icccm4 \
+libxcb-image0 \
+libxcb-keysyms1 \
+libxcb-render-util0 \
+libxcb-shape0 \
+libx11-6
 
-CMD  ["python3", "-m", "main"]
+
+ENV PYTHONPATH="/app:${PYTHONPATH}"
+
+CMD  ["python3", "main.py"]
