--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ readme = "README.md"
 requires-python = ">=3.13,<3.14"
 dependencies = [
     "toml (>=0.10.2,<0.11.0)",
-    "pyside6 (>=6.9.0,<7.0.0)"
+    "pyside6 (>=6.9.0,<7.0.0)",
+    "sphinx (>=8.2.3,<9.0.0)",
+    "myst-parser (>=4.0.1,<5.0.0)",
+    "sphinxcontrib-programoutput (>=0.18,<0.19)",
+    "sphinx-copybutton (>=0.5.2,<0.6.0)",
+    "furo (>=2024.8.6,<2025.0.0)"
 ]
 
 
