--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,5 @@ pyoxidizer = "^0.24.0"
 [tool.poetry.group.lint.dependencies]
 black = "^25.1.0"
 pylama = {extras = ["all"], version = "^8.4.1"}
+isort = "^6.0.1"
 
