--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -39,16 +39,7 @@ COPY main.py /app/
 COPY local_data_parse /app/local_data_parse/
 COPY scan_project_env.py /app/
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    libfontconfig1
-
-RUN apt-get install -y --no-install-recommends libglib2.0
-
-RUN apt-get install -y --no-install-recommends libxkbcommon-x11-0
-
-RUN apt-get install -y --no-install-recommends libgl1
-RUN apt-get install -y --no-install-recommends libxcb-xinerama0 \
+RUN apt-get update && apt-get install -y --no-install-recommends libxcb-xinerama0 \
 libxcb-cursor0 \
 libxkbcommon-x11-0 \
 libxcb-icccm4 \
@@ -56,7 +47,11 @@ libxcb-image0 \
 libxcb-keysyms1 \
 libxcb-render-util0 \
 libxcb-shape0 \
-libx11-6
+libx11-6 \
+libgl1 \
+libxkbcommon-x11-0 \
+libglib2.0 \
+libfontconfig1
 
 
 ENV PYTHONPATH="/app:${PYTHONPATH}"
