--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "magowiz",email = "magowiz@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13,<3.14"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "toml (>=0.10.2,<0.11.0)",
     "pyside6 (>=6.9.0,<7.0.0)",
@@ -14,7 +14,8 @@ dependencies = [
     "myst-parser (>=4.0.1,<5.0.0)",
     "sphinxcontrib-programoutput (>=0.18,<0.19)",
     "sphinx-copybutton (>=0.5.2,<0.6.0)",
-    "furo (>=2024.8.6,<2025.0.0)"
+    "furo (>=2024.8.6,<2025.0.0)",
+    "pdoc3 (>=0.11.6,<0.12.0)"
 ]
 
 
