--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "sphinxcontrib-programoutput (>=0.18,<0.19)",
     "sphinx-copybutton (>=0.5.2,<0.6.0)",
     "furo (>=2024.8.6,<2025.0.0)",
+    "pdoc3 (>=0.11.6,<0.12.0)",
 ]
 
 
