--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pyoxidizer = "^0.24.0"
 black = "^25.1.0"
 pylama = {extras = ["all"], version = "^8.4.1"}
 isort = "^6.0.1"
+pydocstyle = "==6.1.*"
 
 
 [tool.poetry.group.test.dependencies]
