--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "sphinx-copybutton (>=0.5.2,<0.6.0)",
     "furo (>=2024.8.6,<2025.0.0)",
     "pdoc3 (>=0.11.6,<0.12.0)",
+    "pallets-sphinx-themes (>=2.3.0,<3.0.0)",
+    "sphinxcontrib-log-cabinet (>=1.0.1,<2.0.0)",
+    "sphinx-tabs (>=3.4.7,<4.0.0)",
 ]
 
 
