--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pallets-sphinx-themes (>=2.3.0,<3.0.0)",
     "sphinxcontrib-log-cabinet (>=1.0.1,<2.0.0)",
     "sphinx-tabs (>=3.4.7,<4.0.0)",
+    "pip-requirements-parser (>=32.0.1,<33.0.0)",
 ]
 
 
