--- a/ci_dockerfiles/generate_doc/Dockerfile
+++ b/ci_dockerfiles/generate_doc/Dockerfile
@@ -4,5 +4,5 @@ RUN apt-get update && apt-get install --no-install-recommends -y avahi-daemon \
     avahi-utils make libnss-mdns && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 RUN pip install poetry
-RUN poetry self add poetry-export-plugin
+RUN poetry self add poetry-plugin-export
 WORKDIR /app
