--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ pydocstyle = "==6.1.*"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
+pytest-cov = "^6.1.1"
 
 
 [tool.poetry.group.doc.dependencies]
