--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ pydocstyle = "==6.1.*"
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
+pytest-rerunfailures = "^15.1"
 
 
 [tool.poetry.group.doc.dependencies]
