--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ pydocstyle = "==6.1.*"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 pytest-rerunfailures = "^15.1"
+pytest-html = "^4.1.1"
 
 
 [tool.poetry.group.doc.dependencies]
