avoid cache pip

--- a/ci_dockerfiles/pytest_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_x11/Dockerfile
@@ -3,5 +3,5 @@ RUN apt-get update && apt-get install --no-install-recommends -y lftp curl xvfb 
      ffmpeg libavcodec-dev libavfilter-dev libavdevice-dev libmtdev-dev xclip xauth  libxcb-xinerama0 bzr \
     && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
-RUN pip install --no-cache-dir --upgrade pip && pip install poetry
+RUN pip install --no-cache-dir --upgrade pip && pip install --no-cache-dir poetry
 RUN poetry self add poetry-plugin-export
