--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 pytest-rerunfailures = "^15.1"
 pytest-html = "^4.1.1"
+pytest-xdist = "^3.6.1"
 
 
 [tool.poetry.group.doc.dependencies]
