--- a/ci_dockerfiles/pytest_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_x11/Dockerfile
@@ -32,5 +32,5 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/*
 
 
-RUN python3 -m pip install --break-system-packages --no-cache-dir --upgrade pip poetry
+RUN python3 -m pip install --break-system-packages --no-cache-dir poetry
 RUN poetry self add poetry-plugin-export
