--- a/pip.conf
+++ b/pip.conf
@@ -1,6 +1,7 @@
 [global]
 index-url = http://devpi:3141/root/pypi/+simple/
 trusted-host = devpi
+break-system-packages = true
 
 [search]
 index = http://devpi:3141/root/pypi/
