--- a/ci_dockerfiles/pytest_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_x11/Dockerfile
@@ -1,6 +1,5 @@
 FROM fedora:42
 
-ARG PYTHON_VERSION_TARGET=3.13
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
@@ -9,10 +8,9 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 RUN dnf update -y && \
     dnf install -y \
-    python${PYTHON_VERSION_TARGET} \
-    python${PYTHON_VERSION_TARGET}-devel \
-    python${PYTHON_VERSION_TARGET}-pip \
-    python${PYTHON_VERSION_TARGET}-venv \
+    python \
+    python-devel \
+    python-pip \
     gcc \
     gcc-c++ \
     git \
@@ -22,21 +20,16 @@ RUN dnf update -y && \
     xdg-utils \
     jq \
     SDL2-devel \
-    libmtdev-devel \
     xclip \
     xorg-x11-xauth \
-    xcb-util-xinerama-devel \
     patchelf \
     glib2-devel \
-    mingw64-gcc-c++ \
-    python3-pipx \
     && dnf clean all
 
 
-RUN python -m pip install --no-cache-dir --upgrade pip
+RUN python -m pip install --no-cache-dir --upgrade pip pipx
 
 RUN pipx install poetry
-
 ENV PATH="/root/.local/bin:${PATH}"
 
 RUN poetry self add poetry-plugin-export
