fixed theme sphinx

--- a/src/devildex/theming/sphinx/devildex_sphinx_theme/theme.conf
+++ b/src/devildex/theming/sphinx/devildex_sphinx_theme/theme.conf
@@ -1,6 +1,6 @@
     [theme]
     inherit = basic
-    stylesheet = devildex.css
+    stylesheet = bootstrap/css/bootstrap.min.css, css/devildex.css
     pygments_style = sphinx
 
     [options]
