--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "sphinx-copybutton (>=0.5.2,<0.6.0)",
     "pip-requirements-parser (>=32.0.1,<33.0.0)",
     "pdoc3 (>=0.11.6,<0.12.0)",
+    "tkinterweb[javascript] (>=4.3.1,<5.0.0)",
+    "tkintermodernthemes (>=1.10.4,<2.0.0)",
 ]
 
 
