--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,9 @@ readme = "README.md"
 requires-python = ">=3.11,<3.14"
 dependencies = [
     "toml (>=0.10.2,<0.11.0)",
-    "pyside6 (>=6.9.0,<7.0.0)",
-    "sphinx (>=8.2.3,<9.0.0)",
-    "myst-parser (>=4.0.1,<5.0.0)",
-    "sphinxcontrib-programoutput (>=0.18,<0.19)",
-    "sphinx-copybutton (>=0.5.2,<0.6.0)",
     "pip-requirements-parser (>=32.0.1,<33.0.0)",
     "pdoc3 (>=0.11.6,<0.12.0)",
-    "tkinterweb[javascript] (>=4.3.1,<5.0.0)",
-    "tkintermodernthemes (>=1.10.4,<2.0.0)",
+    "pywebview[gtk] (>=5.4,<6.0)",
 ]
 
 
