--- a/ci_dockerfiles/pytest_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_x11/Dockerfile
@@ -35,3 +35,4 @@ ENV PATH="/root/.local/bin:${PATH}"
 
 RUN poetry self add poetry-plugin-export
 RUN dnf update -y && dnf install -y cairo-devel && dnf clean all
+RUN dnf update -y && dnf install -y cairo-gobject-devel && dnf clean all
