--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ pytest-cov = "^6.1.1"
 pytest-rerunfailures = "^15.1"
 pytest-html = "^4.1.1"
 pytest-xdist = "^3.6.1"
+pytest-anyio = "^0.0.0"
+pylama = "^8.4.1"
+typeguard = "^4.4.2"
 
 
 [tool.poetry.group.doc.dependencies]
