--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-html = "^4.1.1"
 pytest-xdist = "^3.6.1"
 pytest-anyio = "^0.0.0"
 typeguard = "^4.4.2"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.doc.dependencies]
