--- a/ruff.toml
+++ b/ruff.toml
@@ -32,8 +32,8 @@ indent-width = 4
 target-version = "py39"
 
 [lint]
-select = ["ERA", "E4", "E7", "E9", "F", "YTT", "ANN", "ASYNC", "S", "A", "FIX", "ICN", "C90", "I", "N", "D", "DOC", "PL"]
-ignore = []
+select = ["ERA", "E4", "E7", "E9", "F", "YTT", "ANN", "ASYNC", "S", "A", "FIX", "ICN", "C90", "I", "N", "D", "PL"]
+ignore = ["D203", "D213"]
 fixable = ["ALL"]
 unfixable = []
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
@@ -48,3 +48,5 @@ docstring-code-line-length = "dynamic"
 
 [lint.per-file-ignores]
 "tests/*" = ["S101"]
+"source/conf.py" = ["E402", "F841", "ANN001", "ANN201", "D100", "A001", "ERA001"]
+"tests/dummy_project/docs/source/conf.py" = ["E402", "F841", "ANN001", "ANN201", "D100", "A001", "ERA001"]
