--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "pip-requirements-parser (>=32.0.1,<33.0.0)",
     "pdoc3 (>=0.11.6,<0.12.0)",
     "requests (>=2.32.3,<3.0.0)",
+    "platformdirs (>=3.0.0,<5.0.0)",
+    "poetry-core (>=2.0.0,<3.0.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)"
 ]
 
 
@@ -45,4 +48,8 @@ sphinx-copybutton = "^0.5.2"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.11.12"
+
+[project.scripts]
+devildex = "devildex.main:main"
+devildex-register-project = "devildex.utils.companion:main"
 
