--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ sphinx-copybutton = "^0.5.2"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.11.12"
+black = "^25.1.0"
 
 [project.scripts]
 devildex = "devildex.main:main"
