add gtk3-devel in pytest to compile wxpython

--- a/ci_dockerfiles/pytest_x11/Dockerfile
+++ b/ci_dockerfiles/pytest_x11/Dockerfile
@@ -23,7 +23,7 @@ RUN dnf update -y && \
     xorg-x11-xauth \
     patchelf \
     glib2-devel \
-    cmake cairo-devel cairo-gobject-devel gawk \
+    cmake cairo-devel cairo-gobject-devel gawk gtk3-devel \
     && dnf clean all
 
 ENV PATH="/root/.local/bin:${PATH}"
