--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "platformdirs (>=3.0.0,<5.0.0)",
     "poetry-core (>=2.0.0,<3.0.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
-    "wxpython (>=4.2.3,<5.0.0)"
+    "wxpython (>=4.2.3,<5.0.0)",
+    "pyjokes (>=0.8.3,<0.9.0)"
 ]
 
 
