add libxtst6 to smoke docker

--- a/ci_dockerfiles/smoke_runner/Dockerfile
+++ b/ci_dockerfiles/smoke_runner/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && \
     libice6 \
     libdbus-glib-1-2 \
     libnotify4 \
+    libxtst6 \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
