--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,8 @@
 addopts = -n auto
 markers =
     focus: mark per eseguire un singolo test specifico (o un gruppo)
+
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(name)s:%(lineno)s --- %(message)s
+log_cli_date_format = %H:%M:%S
