--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "wxpython (>=4.2.3,<5.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
+    "pydoctor (>=25.4.0,<26.0.0)",
 ]
 
 
