--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts = -n auto
 markers =
-    focus: mark per eseguire un singolo test specifico (o un gruppo)
+    focus: mark to execute only a single test
 
 log_cli = true
 log_cli_level = INFO
