--- a/ci_dockerfiles/generate_doc/Dockerfile
+++ b/ci_dockerfiles/generate_doc/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.13-slim
 
 RUN apt-get update && apt-get install --no-install-recommends -y avahi-daemon \
-    avahi-utils make libnss-mdns && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
-RUN pip install --no-cache-dir poetry && poetry self add poetry-plugin-export
+    avahi-utils libnss-mdns make && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && pip install --no-cache-dir poetry && poetry self add poetry-plugin-export
 WORKDIR /app
