fix sonarqube issues

--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -38,19 +38,20 @@ COPY main.py /app/
 COPY local_data_parse /app/local_data_parse/
 COPY scan_project_env.py /app/
 
-RUN apt-get update && apt-get install -y --no-install-recommends libxcb-xinerama0 \
+RUN apt-get update && apt-get install -y --no-install-recommends  \
+libfontconfig1 \
+libgl1 \
+libglib2.0 \
+libx11-6 \
 libxcb-cursor0 \
-libxkbcommon-x11-0 \
 libxcb-icccm4 \
 libxcb-image0 \
 libxcb-keysyms1 \
 libxcb-render-util0 \
 libxcb-shape0 \
-libx11-6 \
-libgl1 \
+libxcb-xinerama0 \
 libxkbcommon-x11-0 \
-libglib2.0 \
-libfontconfig1 \
+libxkbcommon-x11-0 \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/*
 
