ignore fontawesome css

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,8 @@ sonar.exclusions=htmlcov/**/*, examples/**/*, lib/sync/tree_metadata.py, lib/clo
   lib/debug/**/*, pipinstreq.py, graph/**/*, documentation/**/**, pdoc_hook.py, meteo-icons/**/*, extra/**/*, \
   build/**/*, coverage_report/**/*, lib/weather/meteo-icons/scripts/**/*, test_report/**/*, \
   megalinter-reports/**/*, ci_dockerfiles/megalinter/megalinter/**/*, ./*.html, \
-  ci_dockerfiles/megalinter/server/**/*, *_*.html, json_converted/**/*, secrets/**/*
+  ci_dockerfiles/megalinter/server/**/*, *_*.html, json_converted/**/*, secrets/**/*, \
+  src/devildex/theming/devildex_mkdocs_theme/css/all.css
 sonar.scm.disabled=true
 sonar.python.coverage.reportPaths=coverage_report_xml/coverage.xml
 sonar.python.version=3
