--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -16,7 +16,7 @@ on: # yamllint disable-line rule:truthy - false positive
       - master
 
 # Comment env block if you do not want to apply fixes
-env:
+# env:
 # Apply linter fixes configuration
 #
 # When active, APPLY_FIXES must also be defined as environment variable
