--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-xdist = "^3.6.1"
 pytest-anyio = "^0.0.0"
 typeguard = "^4.4.2"
 requests = "^2.32.3"
+pytest-mock = "^3.14.1"
 
 
 [tool.poetry.group.doc.dependencies]
