disable errors on megalinter

--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -91,7 +91,7 @@ jobs:
             }}
 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          DISABLE_ERRORS: true
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE
           # .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
 
