exclude bootstrap from scanning

--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -92,6 +92,9 @@ jobs:
 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DISABLE_ERRORS: true
+          # Exclude directories from the scan
+          FILTER_REGEX_EXCLUDE: '(source/|src/devildex/theming/common_assets/bootstrap/)'
+
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE
           # .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
 
