--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -3,9 +3,9 @@ name: Python Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 permissions:
   contents: read
@@ -13,8 +13,9 @@ permissions:
 jobs:
   test:
     # Non eseguire questo job se il messaggio di commit contiene [lint]
-    # Questo replica la condizione 'when' del tuo Jenkinsfile.
-    if: "!contains(github.event.head_commit.message, '[lint]')"
+    # La condizione 'if' è stata rimossa perché causava problemi con
+    # gli eventi 'pull_request'. La reintrodurremo in modo più robusto
+    # una volta che il workflow base funziona.
 
     runs-on: ubuntu-latest
 
@@ -36,6 +37,17 @@ jobs:
 
     - name: Install Poetry
       run: pipx install poetry
+
+    - name: Install system dependencies for wxPython and Xvfb
+      # Questo step è FONDAMENTALE. Installa le librerie di sistema
+      # che il tuo Dockerfile 'pytest_x11' conteneva, necessarie per wxPython.
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          libgtk-3-dev \
+          libwebkit2gtk-4.0-dev \
+          libxtst-dev \
+          xvfb
 
     - name: Install dependencies
       # Installa le dipendenze del progetto e quelle di test
