--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -32,14 +32,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-          cache: 'poetry'
 
       - name: Install and configure Poetry
-        # Usa un'action dedicata che gestisce l'installazione e il PATH
         uses: snok/install-poetry@v1
-
-      - name: Install dependencies for documentation
-        run: poetry install --with doc
+        with:
+          # L'action si occupa di installare le dipendenze e di metterle in cache.
+          # Con questo argomento, installiamo anche quelle del gruppo 'doc'.
+          install-args: --with doc
 
       - name: Build documentation with Sphinx
         # NOTA: Questo comando assume che la sorgente della tua documentazione
